--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rwini"
 version = "0.1.0"
 edition = "2021"
+description = "A lib for parsing Rusted Warfare ini in Rust."
+license = "GPL-v3"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
