--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indexmap = { version = "2.3.0", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
